# LLM-Debate-Competition

./: Debate_Competittion.ipynb  README.md  day1.ipynb  pyproject.toml  requirements.txt
